# ESE6500-Final-Project

./: .gitignore  LICENSE  README.md  pyproject.toml
configs/envs/: franka_allegro_drake_env.yaml
data/coffee_can/20200709_141754/: meta.yml  pose.npz
data/coffee_can/20200709_141754/836212060125/: labels_000000.npz  labels_000001.npz  labels_000002.npz  labels_000003.npz  labels_000004.npz  labels_000005.npz  labels_000006.npz  labels_000007.npz  labels_000008.npz  labels_000009.npz  labels_000010.npz  labels_000011.npz  labels_000012.npz  labels_000013.npz  labels_000014.npz  labels_000015.npz  labels_000016.npz  labels_000017.npz  labels_000018.npz  labels_000019.npz  labels_000020.npz  labels_000021.npz  labels_000022.npz  labels_000023.npz  labels_000024.npz  labels_000025.npz  labels_000026.npz  labels_000027.npz  labels_000028.npz  labels_000029.npz  labels_000030.npz  labels_000031.npz  labels_000032.npz  labels_000033.npz  labels_000034.npz  labels_000035.npz  labels_000036.npz  labels_000037.npz  labels_000038.npz  labels_000039.npz  (+32 more)
data/coffee_can/20200709_141754/839512060362/: labels_000000.npz  labels_000001.npz  labels_000002.npz  (+69 more)
data/mustard_bottle/: data_interpretation.md
data/mustard_bottle/20200709_143211/: meta.yml  pose.npz
data/mustard_bottle/camera_calibration/: extrinsics.yml
data/traj_opt/dynamic_feasible_trajs/: optimized_trajectory_20250514_0.npy
scripts/: drake_env_test.py  franka_allegro_env_test.py  kinematic_retargeting.py  kinematic_retargeting_test.py  model_inspector.py  traj_opt_test.py  traj_opt_zero_order_test.py
(+953 files in other folders)
